适配器模式

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
       <module>prototype-pattern</module>
       <module>proxy-pattern</module>
       <module>adapter-pattern</module>
+      <module>bridge-pattern</module>
   </modules>
 
 
